--- a/index.html
+++ b/index.html
@@ -4,12 +4,26 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Burger</title>
+		<link rel="stylesheet" href="css/null.css ">
 		<link rel="stylesheet" href="css/style.css">
 		<!-- <link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet"> -->
 	</head>
 	<body>
-		Сайт про бургеры
+		<header>
+			<div class="container">
+				<div class="header">
+					<div class="logo"></div>
+					<nav class="nav">
+						<a class="nav-link" href="#" target="_blank" rel="noopener noreferrer">Главная</a>
+						<a class="nav-link" href="#" target="_blank" rel="noopener noreferrer">Меню</a>
+						<a class="nav-link" href="#" target="_blank" rel="noopener noreferrer">О нас</a>
+						<a class="nav-link" href="#" target="_blank" rel="noopener noreferrer">Контакты</a>
+					</nav>
+					<a class="cart" href="#" target="_blank" rel="noopener noreferrer">$125 <span class="cart-count">5</span></a>
+				</div>
+			</div>
+		</header>
 	</body>
 </html>
