--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 		<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet"> -->
 	</head>
 	<body>
-		<header>
+		<header class="header">
 			<div class="container">
-				<div class="header">
+				<div class="header-wrapper">
 					<div class="logo"></div>
 					<nav class="nav">
 						<a class="nav-link" href="#" target="_blank" rel="noopener noreferrer">Главная</a>
@@ -28,11 +28,20 @@
 		<section class="hero">
 			<div class="container">
 				<ul class="breadcrumbs">
-					<li class="breadcrumbs-item"><a class="breadcrumbs-link" href>Главная</a></li>
+					<li class="breadcrumbs-item"><a class="breadcrumbs-link" href="#">Главная</a></li>
 					<li class="breadcrumbs-item">Меню</li>
 				</ul>
 				<h1 class="hero-title">Наше меню</h1>
 				<p class="hero-description">Выбирай из предложенного ассортимента и мы доставим блюдо в течении часа</p>
+			</div>
+		</section>
+		<section class="banner">
+			<div class="container">
+				<div class="banner-wrapper">
+					<h2 class="banner-title"><span>скидка</span>-30%</h2>
+					<p class="banner-description">Только при&nbspпокупке 3-х и более позиций, мы&nbspдарим скидку. Акции не&nbspсуммируются.</p>
+					<button class="banner-btn">купить сейчас</button>
+				</div>
 			</div>
 		</section>
 	</body>
