--- a/index.html
+++ b/index.html
@@ -40,9 +40,76 @@
 				<div class="banner-wrapper">
 					<h2 class="banner-title"><span>скидка</span>-30%</h2>
 					<p class="banner-description">Только при&nbspпокупке 3-х и более позиций, мы&nbspдарим скидку. Акции не&nbspсуммируются.</p>
-					<button class="banner-btn">купить сейчас</button>
+					<button type="button" class="banner-btn">купить сейчас</button>
 				</div>
 			</div>
 		</section>
+		<main>
+			<section>
+				<div class="container">
+					<div class="menu">
+						<div class="menu-header">
+							<h2 class="menu-title">Бургеры</h2>
+							<select class="menu-sorting">
+								<option value disabled selected>Сортировать</option>
+								<option value>По возрастанию</option>
+								<option value>По убыванию</option>
+								<option value>По умолчанию</option>
+							</select>
+						</div>
+						<div class="menu-box">
+							<div class="menu-item">
+								<div class="menu-thumb">
+									<img src="img/menu/01.jpg" alt="Острый бургер">
+								</div>
+								<h3 class="menu-name">Острый бургер</h3>
+								<p class="price">$26</p>
+								<button type="button" class="menu-btn">Купить</button>
+							</div>
+							<div class="menu-item">
+								<div class="menu-thumb">
+									<img src="img/menu/02.jpg" alt="Гриль Бургер">
+								</div>
+								<h3 class="menu-name">Гриль Бургер</h3>
+								<p class="price">$16</p>
+								<button type="button" class="menu-btn">Купить</button>
+							</div>
+							<div class="menu-item">
+								<div class="menu-thumb">
+									<img src="img/menu/03.jpg" alt="Бурег Гигант">
+								</div>
+								<h3 class="menu-name">Бурег Гигант</h3>
+								<p class="price">$37</p>
+								<button type="button" class="menu-btn">Купить</button>
+							</div>
+							<div class="menu-item">
+								<div class="menu-thumb">
+									<img src="img/menu/05.jpg" alt="Бургер с курицей">
+								</div>
+								<h3 class="menu-name">Бургер с курицей</h3>
+								<p class="price">$18</p>
+								<button type="button" class="menu-btn">Купить</button>
+							</div>
+							<div class="menu-item">
+								<div class="menu-thumb">
+									<img src="img/menu/05.jpg" alt="Бургер с курицей">
+								</div>
+								<h3 class="menu-name">Бургер с курицей</h3>
+								<p class="price">$9</p>
+								<button type="button" class="menu-btn">Купить</button>
+							</div>
+							<div class="menu-item">
+								<div class="menu-thumb">
+									<img src="img/menu/06.jpg" alt="Тройной бургер">
+								</div>
+								<h3 class="menu-name">Тройной бургер</h3>
+								<p class="price">$7</p>
+								<button type="button" class="menu-btn">Купить</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+		</main>
 	</body>
 </html>
