--- a/index.html
+++ b/index.html
@@ -107,9 +107,73 @@
 								<button type="button" class="menu-btn">Купить</button>
 							</div>
 						</div>
+						<div class="menu-header">
+							<h2 class="menu-title">Дополнительно</h2>
+						</div>
+						<div class="menu-box">
+							<div class="menu-item">
+								<div class="menu-thumb">
+									<img src="img/menu/additionally/01.jpg" alt="Сэндвич">
+								</div>
+								<h3 class="menu-name">Сэндвич</h3>
+								<p class="price">$3</p>
+								<button type="button" class="menu-btn">Купить</button>
+							</div>
+							<div class="menu-item">
+								<div class="menu-thumb">
+									<img src="img/menu/additionally/02.jpg" alt="Картошка Фри">
+								</div>
+								<h3 class="menu-name">Картошка Фри</h3>
+								<p class="price">$5</p>
+								<button type="button" class="menu-btn">Купить</button>
+							</div>
+							<div class="menu-item">
+								<div class="menu-thumb">
+									<img src="img/menu/additionally/03.jpg" alt="Хот-Дог">
+								</div>
+								<h3 class="menu-name">Хот-Дог</h3>
+								<p class="price">$7</p>
+								<button type="button" class="menu-btn">Купить</button>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
 		</main>
+		<footer class="footer">
+			<div class="container">
+				<div class="footer-wrapper">
+					<a href="#" class="footer-logo"></a>
+					<div class="footer-item">
+						<h3 class="footer-title">Основные ссылки</h3>
+						<nav class="footer-nav">
+							<a href="#" class="footer-link">Меню</a>
+							<a href="#" class="footer-link">Заказ и Доставка</a>
+							<a href="#" class="footer-link">Методы оплаты</a>
+							<a href="#" class="footer-link">Контакты</a>
+						</nav>
+					</div>
+					<div class="footer-item">
+						<h3 class="footer-title">Основная информация</h3>
+						<ul class="footer-list">
+							<li>
+								<span>Время</span>
+								ПН - ВС
+								<br>
+								11:00 - 22:00 без перерывов
+							</li>
+							<li>
+								<span>Адрес</span>
+								Москва, ул. Тверская, 5
+							</li>
+						</ul>
+					</div>
+					<div class="footer-item">
+						<a class="footer-tel" href="tel+79007871313">+ 7 900 787 13-13</a>
+						<a class="footer-tel" href="tel+79007001414">+ 7 900 700 14-14</a>
+					</div>
+				</div>
+			</div>
+		</footer>
 	</body>
 </html>
