--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 				<div class="header-wrapper">
 					<div class="logo"></div>
 					<nav class="nav">
-						<a class="nav-link" href="#" target="_blank" rel="noopener noreferrer">Главная</a>
-						<a class="nav-link" href="#" target="_blank" rel="noopener noreferrer">Меню</a>
-						<a class="nav-link" href="#" target="_blank" rel="noopener noreferrer">О нас</a>
-						<a class="nav-link" href="#" target="_blank" rel="noopener noreferrer">Контакты</a>
+						<a class="nav-link" href="index.html">Главная</a>
+						<a class="nav-link" href="#">Меню</a>
+						<a class="nav-link" href="#">О нас</a>
+						<a class="nav-link" href="contact.html">Контакты</a>
 					</nav>
 					<a class="cart" href="#" target="_blank" rel="noopener noreferrer">$125 <span class="cart-count">5</span></a>
 				</div>
