--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
 					<div class="footer-item">
 						<h3 class="footer-title">Основные ссылки</h3>
 						<nav class="footer-nav">
-							<a href="#" class="footer-link">Меню</a>
+							<a href="index.html" class="footer-link">Меню</a>
 							<a href="#" class="footer-link">Заказ и Доставка</a>
 							<a href="#" class="footer-link">Методы оплаты</a>
-							<a href="#" class="footer-link">Контакты</a>
+							<a href="contact.html" class="footer-link">Контакты</a>
 						</nav>
 					</div>
 					<div class="footer-item">
