--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 		<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet"> -->
 	</head>
 	<body>
-		<header class="header">
+		<header class="header" id="header-top">
 			<div class="container">
 				<div class="header-wrapper">
 					<div class="logo"></div>
 					<nav class="nav">
 						<a class="nav-link" href="index.html">Главная</a>
 						<a class="nav-link" href="#">Меню</a>
-						<a class="nav-link" href="#">О нас</a>
+						<a class="nav-link" href="#">О&nbsp;нас</a>
 						<a class="nav-link" href="contact.html">Контакты</a>
 					</nav>
 					<a class="cart" href="#" target="_blank" rel="noopener noreferrer">$125 <span class="cart-count">5</span></a>
@@ -40,12 +40,12 @@
 				<div class="banner-wrapper">
 					<h2 class="banner-title"><span>скидка</span>-30%</h2>
 					<p class="banner-description">Только при&nbspпокупке 3-х и более позиций, мы&nbspдарим скидку. Акции не&nbspсуммируются.</p>
-					<button type="button" class="banner-btn">купить сейчас</button>
+					<a href="#menu-burger" type="button" class="banner-btn">купить сейчас</a>
 				</div>
 			</div>
 		</section>
 		<main>
-			<section>
+			<section id="menu-burger">
 				<div class="container">
 					<div class="menu">
 						<div class="menu-header">
@@ -175,5 +175,7 @@
 				</div>
 			</div>
 		</footer>
+		<a class="button-up hidden" id="btnUp" href="#header-top">Наверх</a>
+		<script src="js/script.js"></script>
 	</body>
 </html>
