--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 		<header class="header">
 			<div class="container">
 				<div class="header-wrapper">
-					<div class="logo"></div>
+					<a href><img class="logo" src="img/logo/logo.svg" alt></a>
 					<nav class="nav">
 						<a href="#" class="nav-link">Главная</a>
 						<a href="index.html" class="nav-link">Меню</a>
