--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<nav class="nav">
 						<a class="nav-link" href="index.html">Главная</a>
 						<a class="nav-link" href="#">Меню</a>
-						<a class="nav-link" href="#">О&nbsp;нас</a>
+						<a class="nav-link" href="#">О нас</a>
 						<a class="nav-link" href="contact.html">Контакты</a>
 					</nav>
 					<a class="cart" href="#" target="_blank" rel="noopener noreferrer">$125 <span class="cart-count">5</span></a>
