--- a/index.html
+++ b/index.html
@@ -111,30 +111,36 @@
 						<div class="menu-header">
 							<h2 class="menu-title">Дополнительно</h2>
 						</div>
-						<div class="menu-box">
-							<div class="menu-item">
+						<div class="menu-box _additionally">
+							<div class="menu-item _additionally">
 								<div class="menu-thumb">
 									<img src="img/menu/additionally/01.jpg" alt="Сэндвич">
 								</div>
-								<h3 class="menu-name">Сэндвич</h3>
-								<p class="price">$3</p>
-								<button type="button" class="menu-btn">Купить</button>
+								<div class="menu-info">
+									<h3 class="menu-name">Сэндвич</h3>
+									<p class="price">$3</p>
+									<button type="button" class="menu-btn">Купить</button>
+								</div>
 							</div>
-							<div class="menu-item">
+							<div class="menu-item _additionally">
 								<div class="menu-thumb">
 									<img src="img/menu/additionally/02.jpg" alt="Картошка Фри">
 								</div>
-								<h3 class="menu-name">Картошка Фри</h3>
-								<p class="price">$5</p>
-								<button type="button" class="menu-btn">Купить</button>
+								<div class="menu-info">
+									<h3 class="menu-name">Картошка Фри</h3>
+									<p class="price">$5</p>
+									<button type="button" class="menu-btn">Купить</button>
+								</div>
 							</div>
-							<div class="menu-item">
+							<div class="menu-item _additionally">
 								<div class="menu-thumb">
 									<img src="img/menu/additionally/03.jpg" alt="Хот-Дог">
 								</div>
-								<h3 class="menu-name">Хот-Дог</h3>
-								<p class="price">$7</p>
-								<button type="button" class="menu-btn">Купить</button>
+								<div class="menu-info">
+									<h3 class="menu-name">Хот-Дог</h3>
+									<p class="price">$7</p>
+									<button type="button" class="menu-btn">Купить</button>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -153,6 +159,8 @@
 							<a href="#" class="footer-link">Методы оплаты</a>
 							<a href="contact.html" class="footer-link">Контакты</a>
 						</nav>
+						<a class="footer-tel _mobile" href="tel+79007871313">+ 7 900 787 13-13</a>
+						<a class="footer-tel _mobile" href="tel+79007001414">+ 7 900 700 14-14</a>
 					</div>
 					<div class="footer-item">
 						<h3 class="footer-title">Основная информация</h3>
