--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<header class="header" id="header-top">
 			<div class="container">
 				<div class="header-wrapper">
+					<button class="burger-menu" onclick="openModal()"></button>
 					<div class="logo"></div>
 					<nav class="nav">
 						<a class="nav-link" href="index.html">Главная</a>
@@ -185,6 +186,15 @@
 			</div>
 		</footer>
 		<a class="button-up hidden" id="btnUp" href="#header-top">Наверх</a>
+		<div class="modal" id="modal">
+			<nav class="nav _modal">
+				<a class="nav-link" href="index.html">Главная</a>
+				<a class="nav-link" href="#">Меню</a>
+				<a class="nav-link" href="#">О нас</a>
+				<a class="nav-link" href="contact.html">Контакты</a>
+			</nav>
+			<button class="modal-close" onclick="closeModal()"></button>
+		</div>
 		<script src="js/script.js"></script>
 	</body>
 </html>
