--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 			<div class="container">
 				<div class="banner-wrapper">
 					<h2 class="banner-title"><span>скидка</span>-30%</h2>
-					<p class="banner-description">Только при&nbspпокупке 3-х и более позиций, мы&nbspдарим скидку. Акции не&nbspсуммируются.</p>
-					<a href="#menu-burger" type="button" class="banner-btn">купить сейчас</a>
+					<p class="banner-description">Только при&nbsp;покупке 3-х и более позиций, мы&nbsp;дарим скидку. Акции не&nbsp;суммируются.</p>
+					<a href="#menu-burger" class="banner-btn">купить сейчас</a>
 				</div>
 			</div>
 		</section>
