--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		<link rel="stylesheet" href="css/null.css ">
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/media.css">
+		<link rel="shortcut icon" href="img/icon/favicon.ico">
+		<link rel="icon" href="img/icon/favicon.svg" type="image/svg+xml">
 		<!-- <link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet"> -->
